fixed button issue & also added text on mobile to view on desktop! lol.

--- a/src/app/components/Landing/LandingAnimation.css
+++ b/src/app/components/Landing/LandingAnimation.css
@@ -65,6 +65,7 @@
 }
 .assetshape{
   transform: rotate(90deg);
+  height:100%;
 }
 
 
